feat:  Prompt Templates

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hi! How can I assist you today?'"
+       "'The distance between Mexico and Thailand is approximately 9,500 miles (15,300 kilometers) when measured in a straight line.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.llms.openai import OpenAI\n",
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
@@ -26,14 +26,19 @@
     "\n",
     "\n",
     "#llm = OpenAI()\n",
-    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\")\n",
+    "chat = ChatOpenAI(\n",
+    "    model_name=\"gpt-3.5-turbo\",\n",
+    "    temperature=0.1, # 낮\n",
+    "    )\n",
     "\n",
-    "#a = lim.predict(\"Hello, how are you?\")\n",
-    "b = chat.predict(\"Hello, please say Hi\")\n",
+    "template = PromptTemplate.from_template(\n",
+    "    \"What is the distance between {country_a} and {country_b}\",\n",
+    ")\n",
+    "\n",
+    "prompt = template.format(country_a=\"Mexico\", country_b=\"Thailand\")\n",
     "\n",
     "\n",
-    "\n",
-    "b"
+    "chat.predict(prompt)"
    ]
   },
   {
@@ -45,122 +50,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Γεια σας! Η απόσταση μεταξύ του Μεξικού και της Ταϊλάνδης είναι περίπου 16.000 χιλιόμετρα. Το όνομά μου είναι Σωκράτης. Πώς μπορώ να βοηθήσω;')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
+    "\n",
+    "\n",
+    "template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a geography expert. And you only reply in {language}.\"),\n",
+    "        (\"ai\", \"Ciao, mi chiamo {name}!\"),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            \"What is the distance between {country_a} and {country_b}. Also, what is your name?\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "prompt = template.format_messages(\n",
+    "    language=\"Greek\",\n",
+    "    name=\"Socrates\",\n",
+    "    country_a=\"Mexico\",\n",
+    "    country_b=\"Thailand\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chat.predict_messages(prompt)"
+   ]
   },
   {
    "cell_type": "code",
@@ -186,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
