--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,62 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- Pinch of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and create a well in the center.\\n2. Crack the eggs into the well and add a pinch of salt.\\n3. Using a fork, slowly incorporate the flour into the eggs until a dough forms.\\n4. Knead the dough for about 10 minutes until it is smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of salted boiling water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!'"
+       "{'history': 'Human: Hello\\nAI: How are you'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.globals import set_llm_cache, set_debug\n",
-    "from langchain.cache import InMemoryCache, SQLiteCache\n",
-    "from dotenv import load_dotenv\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "\n",
-    "load_dotenv('./env/.env')\n",
-    "set_llm_cache(SQLiteCache(\"cache.db\"))\n",
-    "# set_debug(True)\n",
+    "memory = ConversationBufferMemory(return_messages=True)\n",
     "\n",
-    "#llm = OpenAI()\n",
-    "chat = ChatOpenAI(\n",
-    "    model_name=\"gpt-3.5-turbo\",\n",
-    "    temperature=0.1, \n",
-    "    # streaming=True,\n",
-    "    # callbacks=[\n",
-    "    #     StreamingStdOutCallbackHandler(),\n",
-    "    # ],\n",
-    ")\n",
-    "\n",
-    "chat.predict(\"How do you make italian pasta\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- Pinch of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and create a well in the center.\\n2. Crack the eggs into the well and add a pinch of salt.\\n3. Using a fork, slowly incorporate the flour into the eggs until a dough forms.\\n4. Knead the dough for about 10 minutes until it is smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of salted boiling water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chat.predict(\"How do you make italian pasta\")"
+    "memory.save_context({ \"input:\" : \"Hello\" }, { \"output:\" : \"How are you\" })\n",
+    "memory.load_memory_variables({})"
    ]
   }
  ],
@@ -77,7 +42,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
