--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,27 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': 'Human: Hello\\nAI: How are you'}"
+       "{'history': [HumanMessage(content='Hello'),\n",
+       "  AIMessage(content='How are you'),\n",
+       "  HumanMessage(content='Hello'),\n",
+       "  AIMessage(content='How are you'),\n",
+       "  HumanMessage(content='Hello'),\n",
+       "  AIMessage(content='How are you'),\n",
+       "  HumanMessage(content='Hello'),\n",
+       "  AIMessage(content='How are you')]}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.memory import ConversationBufferMemory\n",
+    "from cv2 import add\n",
+    "from langchain.memory import ConversationBufferWindowMemory\n",
     "\n",
-    "memory = ConversationBufferMemory(return_messages=True)\n",
+    "# k는 최대 저장할 메모리의 갯수 \n",
+    "memory = ConversationBufferWindowMemory(return_messages=True, k=4)\n",
     "\n",
-    "memory.save_context({ \"input:\" : \"Hello\" }, { \"output:\" : \"How are you\" })\n",
-    "memory.load_memory_variables({})"
+    "def add_message(input, output):\n",
+    "    memory.save_context({ \"input:\" : input }, { \"output:\" : output })\n",
+    "\n",
+    "\n",
+    "add_message(1, 2)\n",
+    "add_message(2, 3)\n",
+    "add_message(3, 4)\n",
+    "add_message(4, 5)\n",
+    "add_message(5, 6)\n",
+    "\n",
+    "memory.load_memory_variables({})\n",
+    "\n"
    ]
   }
  ],
