--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,46 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content='Hello'),\n",
-       "  AIMessage(content='How are you'),\n",
-       "  HumanMessage(content='Hello'),\n",
-       "  AIMessage(content='How are you'),\n",
-       "  HumanMessage(content='Hello'),\n",
-       "  AIMessage(content='How are you'),\n",
-       "  HumanMessage(content='Hello'),\n",
-       "  AIMessage(content='How are you')]}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from cv2 import add\n",
-    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.memory import ConversationSummaryMemory\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv('./env/.env')\n",
+    "\n",
+    "llm = ChatOpenAI(\n",
+    "    model_name=\"gpt-3.5-turbo\",\n",
+    "    temperature=0.1\n",
+    ")\n",
     "\n",
     "# k는 최대 저장할 메모리의 갯수 \n",
-    "memory = ConversationBufferWindowMemory(return_messages=True, k=4)\n",
+    "memory = ConversationSummaryMemory(llm=llm)\n",
     "\n",
     "def add_message(input, output):\n",
     "    memory.save_context({ \"input:\" : input }, { \"output:\" : output })\n",
     "\n",
+    "def get_history():\n",
+    "    return memory.load_memory_variables({})\n",
     "\n",
-    "add_message(1, 2)\n",
-    "add_message(2, 3)\n",
-    "add_message(3, 4)\n",
-    "add_message(4, 5)\n",
-    "add_message(5, 6)\n",
     "\n",
-    "memory.load_memory_variables({})\n",
+    "\n",
+    "\n",
+    "add_message(\"Hi my name is michael, I live in seoul\", \"Hello Michael, nice to meet you\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\"I am a software engineer\", \"That's cool, what kind of software do you work on?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_history()"
    ]
   }
  ],
