--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv('./env/.env')\n",
@@ -17,8 +17,8 @@
     "    temperature=0.1\n",
     ")\n",
     "\n",
-    "# k는 최대 저장할 메모리의 갯수 \n",
-    "memory = ConversationSummaryMemory(llm=llm)\n",
+    "# 메세지 토큰 수의 최대값\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=150, return_messages=True)\n",
     "\n",
     "def add_message(input, output):\n",
     "    memory.save_context({ \"input:\" : input }, { \"output:\" : output })\n",
@@ -44,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': 'Michael from Seoul introduces himself as a software engineer to the AI. The AI responds with a friendly greeting and asks Michael what kind of software he works on.'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_history()"
    ]
