--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,11 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    \n",
+      "    Human:My name is Michael\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Michael! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -18,48 +50,108 @@
     ")\n",
     "\n",
     "# 메세지 토큰 수의 최대값\n",
-    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=150, return_messages=True)\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=120, memory_key=\"chat_history\")\n",
     "\n",
-    "def add_message(input, output):\n",
-    "    memory.save_context({ \"input:\" : input }, { \"output:\" : output })\n",
+    "template = \"\"\"\n",
+    "    You are a helpful AI talking to a human.\n",
     "\n",
-    "def get_history():\n",
-    "    return memory.load_memory_variables({})\n",
+    "    {chat_history}\n",
+    "    Human:{question}\n",
+    "    You:\n",
+    "\"\"\"\n",
     "\n",
+    "chain = LLMChain(\n",
+    "    llm=llm,\n",
+    "    memory=memory,\n",
+    "    prompt=PromptTemplate.from_template(template),\n",
+    "    verbose=True\n",
+    ")\n",
     "\n",
-    "\n",
-    "\n",
-    "add_message(\"Hi my name is michael, I live in seoul\", \"Hello Michael, nice to meet you\")\n",
+    "chain.predict(question=\"My name is Michael\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"I am a software engineer\", \"That's cool, what kind of software do you work on?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Michael\n",
+      "AI: Hello Michael! How can I assist you today?\n",
+      "    Human:I live in Korea\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': 'Michael from Seoul introduces himself as a software engineer to the AI. The AI responds with a friendly greeting and asks Michael what kind of software he works on.'}"
+       "\"That's great to know! How can I assist you with information or tasks related to Korea?\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_history()"
+    "chain.predict(question=\"I live in Korea\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Michael\n",
+      "AI: Hello Michael! How can I assist you today?\n",
+      "Human: I live in Korea\n",
+      "AI: That's great to know! How can I assist you with information or tasks related to Korea?\n",
+      "    Human:What is my name?\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Your name is Michael.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.predict(question=\"What is my name?\")"
    ]
   }
  ],
