feat: Stuff LCEL Chain

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "음 tags=['Chroma', 'CacheBackedEmbeddings'] vectorstore=<langchain.vectorstores.chroma.Chroma object at 0x320588650>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Winston lives in Victory Mansions.'"
+       "AIMessage(content='Victory Mansions is a building from which one can see all four of the major Ministries in London. It is not described in detail in the provided context, but it serves as a vantage point to observe the surrounding architecture, which is dwarfed by the size of the Ministries. The context does not provide further information about its characteristics or significance.')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +31,8 @@
     "from langchain.vectorstores import Chroma\n",
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
     "from langchain.storage import LocalFileStore\n",
-    "from langchain.chains import RetrievalQA\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -53,38 +61,31 @@
     "\n",
     "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "# retriever(선별하여 가져오기)은 class의 interface개념이다\n",
-    "# Document를 vector store외의 다른 곳에서도 가져올 수 있다. ex) cloud\n",
-    "chain = RetrievalQA.from_chain_type(\n",
-    "    llm=llm,\n",
-    "    chain_type=\"stuff\", # stuff-Chroma, refine-FAISS (vectorstore 변경해야함) \n",
-    "    retriever=vectorstore.as_retriever(),\n",
+    "# Retriever는 한개의 string을 입력받고 document들의 list를 출력한다.\n",
+    "retriver = vectorstore.as_retriever()\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
     ")\n",
     "\n",
-    "chain.run(\"What does Winston live?\")\n",
-    "\n",
+    "# RunnablePassthrough는 입력값(Description Victory Mansions)을 그대로 출력함(해당 값이 question에 그대로 작성됨)\n",
+    "chain = (\n",
+    "    {\n",
+    "        \"context\": retriver,\n",
+    "        \"question\": RunnablePassthrough(),\n",
+    "    }\n",
+    "    | prompt\n",
+    "    | llm\n",
+    ")\n",
+    "# invoke -> retriever(document들의 list 반환, 해당 document들은 context로 입력), 또한 매개인자는 question으로 입력됨 -> \n",
+    "chain.invoke(\"Describe Victory Mansions\")\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Document(page_content='\\nWinston kept his back turned to the telescreen. It was safer, though, as he well knew, even a back can be revealing. A kilometre away the Ministry of Truth, his place of work, towered vast and white above the grimy landscape. This, he thought with a sort of vague distaste -- this was London, chief city of Airstrip One, itself the third most populous of the provinces of Oceania. He tried to squeeze out some childhood memory that should tell him whether London had always been quite like this. Were there always these vistas of rotting nineteenth-century houses, their sides shored up with baulks of timber, their windows patched with cardboard and their roofs with corrugated iron, their crazy garden walls sagging in all directions? And the bombed sites where the plaster dust swirled in the air and the willow-herb straggled over the heaps of rubble; and the places where the bombs had cleared a larger patch and there had sprung up sordid colonies of wooden dwellings like chicken-houses? But it was no use, he could not remember: nothing remained of his childhood except a series of bright-lit tableaux occurring against no background and mostly unintelligible.', metadata={'source': './files/chapter_one.docx'}), Document(page_content='\\nWinston kept his back turned to the telescreen. It was safer, though, as he well knew, even a back can be revealing. A kilometre away the Ministry of Truth, his place of work, towered vast and white above the grimy landscape. This, he thought with a sort of vague distaste -- this was London, chief city of Airstrip One, itself the third most populous of the provinces of Oceania. He tried to squeeze out some childhood memory that should tell him whether London had always been quite like this. Were there always these vistas of rotting nineteenth-century houses, their sides shored up with baulks of timber, their windows patched with cardboard and their roofs with corrugated iron, their crazy garden walls sagging in all directions? And the bombed sites where the plaster dust swirled in the air and the willow-herb straggled over the heaps of rubble; and the places where the bombs had cleared a larger patch and there had sprung up sordid colonies of wooden dwellings like chicken-houses? But it was no use, he could not remember: nothing remained of his childhood except a series of bright-lit tableaux occurring against no background and mostly unintelligible.', metadata={'source': './files/chapter_one.docx'}), Document(page_content='\\nWinston kept his back turned to the telescreen. It was safer, though, as he well knew, even a back can be revealing. A kilometre away the Ministry of Truth, his place of work, towered vast and white above the grimy landscape. This, he thought with a sort of vague distaste -- this was London, chief city of Airstrip One, itself the third most populous of the provinces of Oceania. He tried to squeeze out some childhood memory that should tell him whether London had always been quite like this. Were there always these vistas of rotting nineteenth-century houses, their sides shored up with baulks of timber, their windows patched with cardboard and their roofs with corrugated iron, their crazy garden walls sagging in all directions? And the bombed sites where the plaster dust swirled in the air and the willow-herb straggled over the heaps of rubble; and the places where the bombs had cleared a larger patch and there had sprung up sordid colonies of wooden dwellings like chicken-houses? But it was no use, he could not remember: nothing remained of his childhood except a series of bright-lit tableaux occurring against no background and mostly unintelligible.', metadata={'source': './files/chapter_one.docx'}), Document(page_content='\\nWinston kept his back turned to the telescreen. It was safer, though, as he well knew, even a back can be revealing. A kilometre away the Ministry of Truth, his place of work, towered vast and white above the grimy landscape. This, he thought with a sort of vague distaste -- this was London, chief city of Airstrip One, itself the third most populous of the provinces of Oceania. He tried to squeeze out some childhood memory that should tell him whether London had always been quite like this. Were there always these vistas of rotting nineteenth-century houses, their sides shored up with baulks of timber, their windows patched with cardboard and their roofs with corrugated iron, their crazy garden walls sagging in all directions? And the bombed sites where the plaster dust swirled in the air and the willow-herb straggled over the heaps of rubble; and the places where the bombs had cleared a larger patch and there had sprung up sordid colonies of wooden dwellings like chicken-houses? But it was no use, he could not remember: nothing remained of his childhood except a series of bright-lit tableaux occurring against no background and mostly unintelligible.', metadata={'source': './files/chapter_one.docx'})]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 저장된 vectorStore에서 특정 검색어와 관련이 있는 document를 검색\n",
-    "# 모든 문서를 vector로 바꾼후, 검색어와 가장 유사한 vector를 가진 문서를 반환\n",
-    "result = vectorstore.similarity_search(\"where does windston live\")\n",
-    "print(result)"
    ]
   }
  ],
